fix TextView wrap_content (test 220)

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -120,6 +120,7 @@ body {
 }
 
 .TextView {
+	display: table;
 	overflow-wrap: break-word;
 	overflow: hidden;
 }
